# daggerverse

./: .cursorrules  .gitignore  .releaserc.js  .releaserc.json  CHANGELOG.md  Makefile  README.md  commitlint.config.js  dagger.json  go.mod  go.sum  go.work.sum  main.go  package-lock.json  package.json  pyproject.toml
${process.env.MODULE_PATH}/: CHANGELOG.md
.ssh/: n8n_ed25519  n8n_ed25519.pub
actionlint/: README.md
airflow/: README.md  dagger.json
argocd/: CHANGELOG.md  README.md  dagger.json  main.go
autodetection/: README.md  dagger.json
caddy/: CHANGELOG.md  Caddyfile  go.mod  main.go
checksum/: README.md  dagger.json
ci/: README.md  dagger.json
dagger/: .gitignore  dagger.json  go.mod  go.sum  main.go
docker/: README.md
docker-compose/: README.md
docs/: .gitignore  Gemfile  Makefile  README.md  _config.yml  index.md
documentation/: CHANGELOG.md  dagger.json  go.mod  main.go
editorconfig/: README.md
examplifier/: README.md
gh/: README.md  dagger.json
github/: CHANGELOG.md  README.md  dagger.json  go.mod
golang/: CHANGELOG.md  README.md  dagger.json  go.mod
gpt/: README.md
hugo/: CHANGELOG.md  dagger.json  go.mod  main.go
instructions/: caddy.md  docker-compose.yml  n8n-digital-ocean.md
jq/: CHANGELOG.md  README.md  dagger.json  main.go
k6/: README.md
kafka/: README.md  dagger.json
kind/: README.md
kustomize/: README.md  dagger.json
mod-releaser/: README.md  dagger.json
openapi-changes/: README.md  dagger.json
openssh-server/: README.md  dagger.json
postgres/: README.md  dagger.json
presentation/: go.mod  (+3 more)
(+399 files in other folders)
