[tool.poetry]
name = "daggerverse"
version = "0.1.0"
description = "A collection of reusable Dagger modules"
authors = ["Felipe Pimentel <felipe.pimentel@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
